// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Maps Block rendering test-1 1`] = `
<div
  className="block maps align center"
>
  <div
    className="maps-inner"
  >
    <div
      className="privacy-protection-wrapper"
      style={
        Object {
          "height": "auto",
          "minHeight": "200px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <iframe
        allowFullScreen={true}
        className="google-map"
        frameBorder="0"
        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.7835278268726!2d14.38842915203974!3d40.634655679238854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133b994881d943cb%3A0x6ab93db57d3272f0!2sHotel+Mediterraneo+Sorrento!5e0!3m2!1sen!2ses!4v1550168740166"
        style={Object {}}
        title="Embeded ESRI Maps"
      />
    </div>
  </div>
</div>
`;

exports[`Test Maps Block rendering test-2 1`] = `
<div
  className="block maps align center"
>
  <div
    className="maps-inner"
  >
    <div
      className="privacy-protection-wrapper"
      style={
        Object {
          "height": "auto",
          "minHeight": "200px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <iframe
        allowFullScreen={true}
        className="google-map"
        frameBorder="0"
        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.7835278268726!2d14.38842915203974!3d40.634655679238854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133b994881d943cb%3A0x6ab93db57d3272f0!2sHotel+Mediterraneo+Sorrento!5e0!3m2!1sen!2ses!4v1550168740166"
        style={
          Object {
            "height": "100vh",
          }
        }
        title="Embeded ESRI Maps"
      />
    </div>
  </div>
</div>
`;

exports[`Test Maps Block rendering test-3 1`] = `
<div>
  <div
    class="block maps align center"
  >
    <div
      class="maps-inner"
    >
      <div
        class="privacy-protection-wrapper"
        style="position: relative; overflow: hidden; height: auto; min-height: 200px;"
      >
        <div
          class="privacy-protection"
        >
          <div
            class="overlay"
          >
            <div
              class="wrapped"
            >
              <div
                class="privacy-button"
              >
                <button
                  class="ui primary button"
                >
                  Show external content
                </button>
              </div>
              <div
                class="privacy-toggle"
              >
                <div
                  class="ui checked toggle checkbox"
                >
                  <input
                    checked=""
                    class="hidden"
                    id="remember-choice-undefined"
                    readonly=""
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <label
                    for="remember-choice-undefined"
                  >
                    Remember my choice
                  </label>
                </div>
              </div>
              <p
                class="discreet"
              >
                Your choice will be saved in a cookie managed by
                 
                .eea.europa.eu
                 that will expire in 
                90
                 days.
              </p>
              <p
                class="discreet"
              >
                <p>
                  <span>
                    This map is hosted by a third party, Environmental Systems Research Institute. By showing the external content you accept the terms and conditions of 
                  </span>
                  <span />
                  <span>
                    . This includes their cookie policies, which we have no control over.
                  </span>
                </p>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Maps Block rendering test-3 2`] = `
<div>
  <div
    class="block maps align center"
  >
    <div
      class="maps-inner"
    >
      <div
        class="privacy-protection-wrapper"
        style="position: relative; overflow: hidden; height: auto; min-height: 200px;"
      >
        <iframe
          allowfullscreen=""
          class="google-map"
          frameborder="0"
          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.7835278268726!2d14.38842915203974!3d40.634655679238854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133b994881d943cb%3A0x6ab93db57d3272f0!2sHotel+Mediterraneo+Sorrento!5e0!3m2!1sen!2ses!4v1550168740166"
          style="height: 100vh;"
          title="Embeded ESRI Maps"
        />
      </div>
    </div>
  </div>
</div>
`;
